react-app/src/components/NavBar/NavBar.css
@media screen and (max-width:1025px) {
  .profile-dropdown-signin {
    z-index: 1;
    border-radius: 5px;
    background-color: white;
    /* border: 1px solid grey; */
    padding-top: 3px;
    padding-bottom: 3px;
    position: absolute;
    font-weight: normal;
    font-style: normal;
    font-size: smaller;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 250px;
    height: 200px;
    top: 110px;
    left: 63%;
    box-shadow: rgb(255 255 255) 0px 0px 2px 6px, rgb(0 0 0) 0px 0px 2px 5px;
  }
}

.navBar-container {
  /* border: 1px solid red; */
  /* height: 100vh; */
}

/* ******************* DEALS HEADER *********************** */
.nav-deals {
  /* border: 1px solid red; */
  background-color: #a21130;
  height: 42px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 50px;
  padding-left: 36%;
}

.nav-deals-text {
  /* border:1px solid blue; */
  width: 100%;
  justify-content: center;
}

.deals-img {
  /* height: 41px;
  width: 50px; */
  width: 418px;
  height: 41px;
}

/* ********************* NAVBAR **************************** */
.nav-box {
  /* border: 1px solid purple; */
  border-bottom: 1px solid rgb(238, 238, 238);

  /* display: flex;
  height: 80px;
  padding: 0 16px; */
  display: flex;
  align-items: center;
  padding-left: 16px;
  /* margin-left: -16px; */
  /* padding-right: 16px; */
  /* margin-right: -16px; */
  height: 80px;
  /* gap: 50px; */
  justify-content: center;
  /* padding-right: 16px; */
}

.nav-logo {
  /* padding-top: 16px;
  padding-bottom: 16px; */
  padding-right: 1.5em;
  width: 125px;
  text-decoration: none;

}

.nav-search {
  width: 358px;
  /* border: 1px solid black; */
  margin-right: 1.5em;
}

.navbar-hearts{
  color: black;
}
/* *********************** COMMUNITY *********************** */

.nav-community-container {
  border-right: 1px solid grey;
  width: 110px;
  display: inline-flex;
  align-items: center;
  grid-gap: 5%;
  gap: 5%;
  padding: 0px 10px;
  margin-right: 4px;
}

.community-icons-text-container {
  display: flex;
  /* margin-right: 2em; */
  /* width:min-content; */
  background-color: white;
}

.react-icons {
  height: 32px;
  /* align-items: center; */
  width: 32px;
  /* border:1px solid green; */
}

.community-text-container {
  /* border: 1px solid black; */
  /* display: flex; */
  /* align-items: center; */
}

.community-text {
  /* border: 1px solid black; */
  width: min-content;

}

/* *********************** USER **********************/
.acct-buttons {
  /* height: 80px; */
  display: flex;
  width: 219px;
  /* border: 1px solid blue; */
  /* grid-gap: 26px; */
  /* gap: 10px;
 */
  /* gap: 1em; */
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.nav-acct-img {
  /* border: 1px solid purple; */
  /* height: 20px; */
  width: 38px;
}

.nav-acct-img img :hover {
  width: 32px;
  object-fit: cover;
}

#user-space-text {
  display: flex;
  background-color: white;
  /* border:1px solid black; */
  gap: 2%;
  align-items: center;
}

.nav-sign-text {
  width: 85px;
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
  /* width: 120px;
  display: flex;
  flex-direction: column;
  align-items: center; */

}

.emoji-button {
  background-color: white;
  font-size: 30px;
  color: black;
}

/* ********************* DROP DOWN ********************** */
.dropdown-container {
  height: 100px;
  display: flex;
  align-items: center;
}

.profile-button-onEnter {}

.profile-button-onLeave {
  visibility: hidden;
  opacity: 0;
  transform: translateY(8px);
}

.profile-dropdown-signin {
  z-index: 1;
  border-radius: 5px;
  background-color: white;
  /* border: 1px solid grey; */
  padding-top: 3px;
  padding-bottom: 3px;
  position: absolute;
  font-weight: normal;
  font-style: normal;
  font-size: smaller;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  /* width: 375px; */
  width: 300px;
  height: 215px;
  /* transition: all 100s ease-in 0s; */
  /* transition-property: all; */
  top: 77px;
  /* bottom: 633px; */
  left: 54.5%;
  /* box-shadow: rgb(255 255 255) 0px 0px 0px 4px, rgb(0 0 0) 0px 0px 0px 5px; */
  box-shadow: rgb(255 255 255) 0px 0px 2px 6px, rgb(0 0 0) 0px 0px 2px 5px;
}

.profile-img-container {
  /* border:1px solid blue; */
  display: flex;
  justify-content: center;
  width: 60px;
}

.img-greetings {
  /* border:1px solid blue; */
  display: flex;
  margin-top: 2%;

}

.profile-img {
  /* height:130% */
}

.profile-greeting {
  /* border:1px solid red; */
  display: flex;
  width: 75%;
  overflow: hidden;
  white-space: pre-line;
  margin-left: 5%;
  align-items: center;
}

.signin-login-buttons-container {
  /* border:1px solid red;
  height: 30px;
  display: flex;
  justify-content: center;
  gap:5px; */
  margin-top: 2%;
  padding-bottom: 2%;
  border-bottom: 1px solid rgb(238, 238, 238);
}

.not-signed-button-container {
  /* border: 1px solid red; */
  height: 30px;
  display: flex;
  justify-content: center;
  gap: 5px;
  margin-top: 3%;
  padding-bottom: 3%;
  border-bottom: 1px solid rgb(238, 238, 238);
  /* width: 85%; */
  width: 274px;
  margin-left: 2%;
}

.profile-signin {
  width: 100%;
  background-color: black;
  border-radius: 9999px;

}

.profile-login {
  width: 100%;
  border: 1px solid black;
  border-radius: 9999px;
  background-color: white;
}

.buy-it-again-container {
  /* border:1px solid red; */
  margin-top: 3%;
  display: flex;
  /* border-bottom: 1px solid rgb(238, 238, 238); */
  padding-bottom: 2%;
  margin-left: 2%;
  /* width:99%; */
}

.buy-it-again-container-signed-in {
  /* border:1px solid blue; */
  display: flex;
  /* border:1px solid blue; */
  margin-top: 2%;
  padding-top: 1%;
  display: flex;
  border-bottom: 1px solid rgb(238, 238, 238);
  /* padding-bottom:2%; */
  /* margin-bottom: 15%; */
  /* background-color: white; */

}

.buy-it-again-button {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  background-color: white;
  /* border:1px solid blue */
}

.buy-it-again-button-signed-in {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  background-color: white;
  margin-bottom: 5%;
}

.loves-container{
  /* border: 1px solid blue; */
  display: flex;
  align-items: center;
  margin-top: 2%;
  padding-top: 1%;
  /* border-bottom: 1px solid rgb(238, 238, 238); */
  margin-left: 2%;
}
#loves-img-container{
  color:blue;
  /* border: 1px solid green; */
  width: 35px;

}

.loves-div{
  /* border: 1px solid red; */
  margin-left: 1%;
}

.loves-div :hover{
  text-decoration: underline;
  cursor: pointer;
}

.loves-button{
  border:1px solid green;
}
.logout-button-container {
  height: 25px;
  margin-top: 2%;
  display: flex;
  justify-content: flex-start;
  border-top: 1px solid rgb(238, 238, 238);
  /* border-bottom: 1px solid rgb(238, 238, 238); */

}

.no-logout-button-container {}

.logout-button {
  background-color: white;
  width: 100px;
  text-align: left;
  /* border:1px solid red; */
}

